tests/fixtures/invalid/unexpected-token.wgsl
// Unexpected token
fn test() {
    var x: f32 = @ 1.0;
}
